@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1403 2003/09/03 01:17:40 andijahja Exp $
+ * $Id: ChangeLog,v 1.1404 2003/09/03 01:28:56 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,9 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2003-09-03 17:30 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
+   * source/rtl/inkey.c
+     ! More keyboard remapping when CapsLock is ON.
 
 2003-09-02 18:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/memvars.c
